<resources>
    <string name="app_name">writing</string>
    <string name="ItemWord">tv_ItemWord</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="btn_Start">播放</string>
    <string name="btn_Starting">播放中</string>
    <string name="btn_Restart">再次播放</string>
    <string name="word_Next">下一個字</string>
    <string name="canvas_Clear">清除字跡</string>
    <string name="title_activity_video__area">video_Area</string>

    <string name="bt_main_video">bt_main_video</string>
    <string name="bt_main_write">bt_main_write</string>
    <string name="tv_mainvideo">硬筆書法影片區</string>
    <string name="tv_write_area">練習寫字</string>
    <string name="tv_word">朱</string>
    <string name="tv_mean">(Error Internet:請連上網路)</string>
    <string name="reload">重新載入資訊</string>
    <string name="tv_word_mean">字義</string>
    <string name="tv_write">練習</string>
    <string name="bt_close">取消</string>
    <string name="version">1.0.0</string>
    <string name="tv_video_area">敬請期待</string>

</resources>
